<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quotes</string>
    <string name="action_settings">Settings</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_login">Login</string>
    <string name="hint_email">foo@bar.com</string>
    <string name="hint_password">password</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="display_name">Display Name</string>

</resources>
